Closed Bug 1645724 Opened 5 years ago Closed 5 years ago

Crash in [@ IconWindowProc] related to Windows minimize to tray

Categories

(Thunderbird :: General, defect)

x86
Windows 10
defect

Tracking

(thunderbird_esr78+ fixed, thunderbird81 wontfix)

RESOLVED FIXED
82 Branch
Tracking Status
thunderbird_esr78 + fixed
thunderbird81 --- wontfix

People

(Reporter: wsmwk, Assigned: mkmelin)

References

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

So far, crashes are all Windows. This crash report is the first, version 76, bp-68c58b95-2cd6-4eff-ac31-aa1620200421.

history: https://crash-stats.mozilla.org/signature/?product=Thunderbird&signature=IconWindowProc&date=%3E%3D2019-12-14T22%3A10%3A00.000Z&date=%3C2020-06-14T22%3A10%3A00.000Z&_columns=date&_columns=product&_columns=version&_columns=build_id&_columns=platform&_columns=reason&_columns=address&_columns=install_time&_columns=startup_crash&_sort=-date&page=1#reports

Top 10 frames of crashing thread:

0 xul.dll IconWindowProc comm/mailnews/base/src/nsMessengerWinIntegration.cpp:1094
1 user32.dll _InternalCallWinProc 
2 user32.dll long __stdcall UserCallWinProcCheckWow 
3 user32.dll DispatchClientMessage 
4 user32.dll __fnDWORD 
5 ntdll.dll KiUserCallbackDispatcher 
6 ntdll.dll KiUserApcDispatcher 
7 user32.dll PeekMessageW 
8 msctf.dll virtual long __stdcall CThreadInputMgr::PeekMessageW 
9 xul.dll nsAppShell::ProcessNextNativeEvent widget/windows/nsAppShell.cpp:504

and another signature
InvalidArrayIndex_CRASH | IconWindowProc bp-899a097b-3f4d-47da-841d-4b54a0200615

a selection that does not have minimize
bp-8e56e81c-2ea3-4add-bfca-7aa060200911
bp-09603e48-954c-45e6-b89a-e37490200911
bp-afeb8255-a269-4ac3-b8d2-419fd0200911

slightly different signature InvalidArrayIndex_CRASH | IconWindowProc bp-6482edca-54d6-441f-aa66-da9750200911

Could help.

Assignee: nobody → mkmelin+mozilla
Status: NEW → ASSIGNED
Attachment #9175482 - Flags: review?(geoff)

Comment on attachment 9175482 [details] [diff] [review]
bug1645724_minimize_crash.patch

Makes sense.

Attachment #9175482 - Flags: review?(geoff) → review+
Target Milestone: --- → 82 Branch

Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/5cbb805362a9
fix Crash in [@ IconWindowProc]. r=darktrojan

Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED

I think this could be taken in the next esr, unless you want to see it on beta more than a week.

Depends on: 1626161
Summary: Crash in [@ IconWindowProc] → Crash in [@ IconWindowProc] related to Windows minimize to tray

Comment on attachment 9175482 [details] [diff] [review]
bug1645724_minimize_crash.patch

[Approval Request Comment]
Yeah, safe crash fix.

Attachment #9175482 - Flags: approval-comm-esr78?

Comment on attachment 9175482 [details] [diff] [review]
bug1645724_minimize_crash.patch

[Triage Comment]
approved for esr78 - limited risk

Attachment #9175482 - Flags: approval-comm-esr78? → approval-comm-esr78+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: