Bug 1645724 - fix Crash in [@ IconWindowProc]. r=darktrojan